# jelly

./: .editorconfig  .gitignore  API_8h_source.html  Backup_8h_source.html  Base_8h_source.html  BlobNodeItem_8h_source.html  BlobNodeRequest_8h_source.html  BlobNode_8h_source.html  Blob_8h_source.html  BufferReader_8h_source.html  BufferWriter_8h_source.html  Buffer_8h_source.html  CMakeLists.txt  CompactionAdvisor_8h_source.html  CompactionJob_8h_source.html  CompactionResult_8h_source.html  Compaction_8h_source.html  CompletionEvent_8h_source.html  Completion_8h_source.html  Compression_8h_source.html  ConfigProxy_8h_source.html  Config_8h.html  Config_8h_source.html  DefaultConfigSource_8h_source.html  DefaultHost_8h_source.html  Doxyfile  ErrorUtils_8h_source.html  Example1_BlobNode_8cpp-example.html  Example2_LockNode_8cpp-example.html  Example3_Housekeeping_8cpp-example.html  Example4_HousekeepingAdvisor_8cpp-example.html  Exception_8h.html  Exception_8h_source.html  FileHeader_8h_source.html  FileStatsContext_8h_source.html  File_8h_source.html  HousekeepingAdvisor_8h_source.html  IBuffer_8h_source.html  IConfigSource_8h_source.html  IFileStreamReader_8h_source.html  (+136 more)
.github/workflows/: cmake.yml  doxygen.yml
cmake/: findzstd.cmake  jellyConfig.cmake.in
docs/: MainPage.md
examples/: CMakeLists.txt  Example1_BlobNode.cpp  Example2_LockNode.cpp  Example3_Housekeeping.cpp  Example4_HousekeepingAdvisor.cpp  ExampleBlobNode.cpp
include/: CMakeLists.txt
include/jelly/: API.h  Backup.h  Base.h  Blob.h  BlobBuffer.h  BlobNode.h  BlobNodeItem.h  BlobNodeRequest.h  Buffer.h  BufferReader.h  BufferWriter.h  Compaction.h  CompactionAdvisor.h  CompactionJob.h  CompactionRedirect.h  CompactionResult.h  CompactionStrategy.h  Completion.h  CompletionEvent.h  Compression.h  Config.h  ConfigProxy.h  DefaultConfigSource.h  DefaultHost.h  ErrorUtils.h  Exception.h  File.h  FileHeader.h  FileStatsContext.h  Host.h  HousekeepingAdvisor.h  IBuffer.h  IConfigSource.h  IFileStreamReader.h  IHost.h  IItem.h  IReader.h  IStats.h  IStoreBlobReader.h  IStoreWriter.h  (+33 more)
jelly/: BufferReader.cpp  BufferReader.h  CMakeLists.txt  CompactionAdvisor.cpp  ConfigProxy.cpp  DefaultConfigSource.cpp  DefaultHost.cpp  ErrorUtils.cpp  File.cpp  File.h  FileStreamReader.cpp  FileStreamReader.h  ICompactionStrategy.h  IOLinux.cpp  IOLinux.h  IOWin32.cpp  IOWin32.h  ItemBase.cpp  Log.cpp  MovingAverage.h  PathUtils.cpp  PathUtils.h  ReplicationNetwork.cpp  RingBuffer.h  SizeTieredCompactionStrategy.cpp  SizeTieredCompactionStrategy.h  Stats.cpp  Stats.h  StoreBlobReader.cpp  StoreBlobReader.h  StoreManager.cpp  StoreWriter.cpp  StoreWriter.h  Stream.cpp  StringUtils.cpp  SystemUtils.cpp  SystemUtils.h  ThreadIndex.cpp  ThreadIndex.h  WALWriter.cpp  (+3 more)
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_3.js  files_4.js  (+17 more)
src/: BufferReader.cpp  BufferReader.h  CMakeLists.txt  DefaultHost.cpp  ErrorUtils.cpp  File.cpp  File.h  FileStreamReader.cpp  FileStreamReader.h  Host.cpp  Host.h  Log.cpp  PathUtils.cpp  PathUtils.h  StoreBlobReader.cpp  StoreBlobReader.h  StoreManager.cpp  StoreManager.h  StoreWriter.cpp  StoreWriter.h  WALWriter.cpp  WALWriter.h  ZstdCompression.cpp  ZstdCompression.h  ZstdStream.cpp  ZstdStream.h
test/: AdvBlobTest.cpp  AdvBlobTest.h  AllTests.cpp  AllTests.h  BackupTest.cpp  BackupTest.h  CMakeLists.txt  CompressionTest.cpp  CompressionTest.h  Config.h  ErrorTest.cpp  ErrorTest.h  FileTest.cpp  FileTest.h  GenerateDocs.cpp  GenerateDocs.h  HousekeepingAdvisorTest.cpp  HousekeepingAdvisorTest.h  ItemHashTableTest.cpp  ItemHashTableTest.h  Main.cpp  MemoryHost.cpp  MemoryHost.h  MiscTest.cpp  MiscTest.h  NodeTest.cpp  NodeTest.h  ReadTest.cpp  ReadTest.h  ReplicationTest.cpp  ReplicationTest.h  StepTest.cpp  StepTest.h  StepThread.h  TestDefaultHost.h  UInt32Blob.h  WriteTest.cpp  WriteTest.h
test/Sim/: BlobServer.cpp  BlobServer.h  CSVOutput.cpp  CSVOutput.h  Client.cpp  Client.h  GameServer.cpp  GameServer.h  Interactive.cpp  Interactive.h  LockServer.cpp  LockServer.h  Network.cpp  Network.h  NodeServer.h  PlayerBlob.h  SharedWorkQueue.cpp  SharedWorkQueue.h  SharedWorkerThread.cpp  SharedWorkerThread.h  SimTest.cpp  SimTest.h  StateTimeSampler.h  Stats.h
